# dsr_aal

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  install_dependencies.sh
.github/workflows/: build.yml
adaptationAgent/: CMakeLists.txt
adaptationAgent/include/adaptationAgent/: preference_learning.hpp
adaptationAgent/src/: main.cpp
adaptation_agent/: CMakeLists.txt
adaptation_agent/etc/: config
adaptation_agent/include/adaptationAgent/: adaptation_agent.hpp  types.hpp
adaptation_agent/src/: adaptation_agent.cpp  preference_learning.cpp
include/: dsr_api_ext.hpp  json_messages.hpp
speechAgent/: CMakeLists.txt
speechAgent/etc/: config
speechAgent/include/speechAgent/: sound_manager.hpp  speech_dispatcher.hpp
speechAgent/src/: main.cpp  speech_dispatcher.cpp
speech_agent/: CMakeLists.txt
speech_agent/include/speechAgent/: speech_agent.hpp
speech_agent/src/: sound_manager.cpp  speech_agent.cpp
webServerAgent/: CMakeLists.txt
webServerAgent/include/: MyController.hpp  webServerAgent.hpp
webserver_agent/: CMakeLists.txt
webserver_agent/etc/: config
webserver_agent/include/: DSR_init.hpp  DSR_interface.hpp  WSListener.hpp  webServerAgent.hpp
webserver_agent/src/: DSR_interface.cpp  WSListener.cpp  webServerAgent.cpp
